--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
