--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "google-auth-library": "^9.8.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
