--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "google-auth-library": "^9.8.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
