--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.8.0",
+    "imagekit": "^5.0.1",
+    "imagekit-javascript": "^3.0.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
