--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "npx jest --runInBand --forceExit --detectOpenHandles --verbose --coverage",
+    "server": "npx nodemon bin/www"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
@@ -10,7 +21,6 @@
     "imagekit-javascript": "^3.0.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "midtrans-client": "^1.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
@@ -19,6 +29,7 @@
     "supertest": "^6.3.4"
   },
   "devDependencies": {
+    "midtrans-client": "^1.3.1",
     "sequelize-cli": "^6.6.2"
   }
 }
