--- a/client-site/package.json
+++ b/client-site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "client-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "midtrans-client": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
